1 column grid on email signup to avoid overflow

--- a/css/main.css
+++ b/css/main.css
@@ -1467,6 +1467,12 @@ input[type=email]:placeholder-shown {
   margin: 0;
 }
 
+@media screen and (max-width: 60em) {
+  .email-signup {
+    grid-template-columns: 1fr;
+  }
+}
+
 footer {
   display: flex;
   align-items: center;
