--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -62,3 +62,9 @@ input[type=email] {
         margin: 0;
     }
 }
+
+@media screen and (max-width: $mq) {
+    .email-signup {
+        grid-template-columns: 1fr
+    }
+}
